--- a/andrea/back/ejemplos/ejerciciosApi/Properties/launchSettings.json
+++ b/andrea/back/ejemplos/ejerciciosApi/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:58591",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:61293",
+      "sslPort": 44392
     }
   },
   "profiles": {
-    "BackEndPreguntasRespuestas": {
+    "ejerciciosApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "Swagger",
-      "applicationUrl": "http://localhost:5267",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7280;http://localhost:5280",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "Swagger",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
